@@ -1,3 +1,9 @@
+2006-05-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/2598
+	* config/obj-elf.c (obj_elf_change_section): Allow user
+	specified SHF_ALPHA_GPREL.
+
 2006-05-05  Bjoern Haase  <bjoern.m.haase@web.de>
 
 	* gas/config/tc-avr.h (TC_VALIDATE_FIX): Define.  Disable fixups
